tests/tests/snapshots/counter_program__counter_configure_table.snap
---
source: tests/tests/counter_program.rs
expression: stripped
---
┌──────────────────────────────────────────────────────────── Transaction #1 ─────────────────────────────────────────────────────────────┐
│ Transaction: 2uw53JAZSwML7mybGN8VM7Qgd3PGsfzn6s35T3G4AUUHXcZ9j9hGKrQHGjaezc1ZCKtsMPXS2eht7Exct1Dd9Pwm | Slot: 0 | Status: Success
│ Fee: 0.000005 SOL | Compute Used: 4281/1400000 CU
│
│ Instructions (1):
│
│ ├─ #1 Counter111111111111111111111111111111111111 (Counter) - Configure
│ │    new_value: 999
│ │    multiplier: 7
│ │    enabled: true
│ │    label: [104, 101, ...(32 bytes)..., 0, 0]
│ │    nonce: 12345
│ │  Accounts (10):
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #   | Account                                      | Type            | Name             | Owner | Data Len | Lamports      | Change |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #1  | AoVsGaj8MSJ6xwKxfFxo9iZWH3enC8RRTXKH2fx2F8os | writable        | counter          | Count | 48       | 1,224,960     | 0      |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #2  | 5Z6Ay5NEcbg3xhopc522sBCRXQujkTiuDRnHGfQdcnSf | signer+writable | authority        | 11111 | 0        | 9,998,765,040 | -5,000 |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #3  | 3BuW9SR5tG6VFK4MmkQQ3Ak8ny1K1Vv5Uz7is8Aa5pwG | readonly        | delegate         | 11111 | 0        | 0             | 0      |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #4  | FMUEmtxhU46GzhKF4FW9MLJdQWiLgjiXP9TYRWSrqTpV | writable        | fee_receiver     | 11111 | 0        | 0             | 0      |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #5  | 6TcyBfPdBt1kjsvDZLzmBFnuMaLWiTaAt4RjUr9VA5YD | readonly        | config           | 11111 | 0        | 0             | 0      |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #6  | 4MfyR4G3NWfVRDWo6iNAHDBZqWMgwZX6FNtMqEW3a9JT | readonly        | metadata         | 11111 | 0        | 0             | 0      |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #7  | 6c5fX1cKYGRNNbozjDdUr2s5vfUuS1XTistmZeG2kZY6 | readonly        | oracle           | 11111 | 0        | 0             | 0      |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #8  | 4Mz4Y6iXdBdAbPMv874YWPgH2oy6QKARovMt2pNurh6e | readonly        | backup_authority | 11111 | 0        | 0             | 0      |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #9  | 11111111111111111111111111111111             | readonly        | system_program   | Nativ | 14       | 1             | 0      |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+
│ │  | #10 | SysvarRent111111111111111111111111111111111  | readonly        | rent             | Sysva | 17       | 1             | 0      |
│ │  +-----+----------------------------------------------+-----------------+------------------+-------+----------+---------------+--------+

│ Program Logs:
│
│ Program Counter111111111111111111111111111111111111 invoke [1]
│ Instruction: Configure
│ label: [104, 101, 108, 108], nonce: 12345
│ Program Counter111111111111111111111111111111111111 consumed 4281 of 200000 compute units
│ Program Counter111111111111111111111111111111111111 success
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
