tests/tests/snapshots/counter_program__counter_increment_table.snap
---
source: tests/tests/counter_program.rs
expression: stripped
---
┌──────────────────────────────────────────────────────────── Transaction #1 ─────────────────────────────────────────────────────────────┐
│ Transaction: 3wYxh96oe4BEejhvHAEaH3T69hvyLaAQWs1ejcYjJmNKR8hRpUVBGxAWX9ZnA2YaKWBUbe5rwnsLeKVDK8mxfoNj | Slot: 0 | Status: Success
│ Fee: 0.000005 SOL | Compute Used: 1173/1400000 CU
│
│ Instructions (1):
│
│ ├─ #1 Counter111111111111111111111111111111111111 (Counter) - Increment
│ │  Accounts (2):
│ │  +----+----------------------------------------------+-----------------+-----------+-------+----------+---------------+--------+
│ │  | #  | Account                                      | Type            | Name      | Owner | Data Len | Lamports      | Change |
│ │  +----+----------------------------------------------+-----------------+-----------+-------+----------+---------------+--------+
│ │  | #1 | mBKqcnGotbsSb5vNrdyhzZ5EhqZdids9QYiTRckvi7v  | writable        | counter   | Count | 48       | 1,224,960     | 0      |
│ │  +----+----------------------------------------------+-----------------+-----------+-------+----------+---------------+--------+
│ │  | #2 | 5Z6Ay5NEcbg3xhopc522sBCRXQujkTiuDRnHGfQdcnSf | signer+writable | authority | 11111 | 0        | 9,998,765,040 | -5,000 |
│ │  +----+----------------------------------------------+-----------------+-----------+-------+----------+---------------+--------+

│ Program Logs:
│
│ Program Counter111111111111111111111111111111111111 invoke [1]
│ Instruction: Increment
│ Program Counter111111111111111111111111111111111111 consumed 1173 of 200000 compute units
│ Program Counter111111111111111111111111111111111111 success
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
