tests/tests/snapshots/counter_program__counter_initialize_table.snap
---
source: tests/tests/counter_program.rs
expression: stripped
---
┌──────────────────────────────────────────────────────────── Transaction #1 ─────────────────────────────────────────────────────────────┐
│ Transaction: 4DySUV8MPozC8yUfFqX9J7r5azJz7MRvhebUjqkQTgmcHHJiFhQptpABSkBe1emRF5odQHYCKU5wrwKMh4bkZrGB | Slot: 0 | Status: Success
│ Fee: 0.000010 SOL | Compute Used: 4413/1400000 CU
│
│ Instructions (1):
│
│ ├─ #1.1 Counter111111111111111111111111111111111111 (Counter) - Initialize
│ │  Accounts (3):
│ │  +----+----------------------------------------------+-----------------+----------------+-------+----------+----------------+------------+
│ │  | #  | Account                                      | Type            | Name           | Owner | Data Len | Lamports       | Change     |
│ │  +----+----------------------------------------------+-----------------+----------------+-------+----------+----------------+------------+
│ │  | #1 | 7v54NWdBtkjuAFJrLGsS2SXnuk8nKam81mZJeeYxVFi9 | signer+writable | counter        | 11111 | 0        | 0              | +1,224,960 |
│ │  +----+----------------------------------------------+-----------------+----------------+-------+----------+----------------+------------+
│ │  | #2 | 5Z6Ay5NEcbg3xhopc522sBCRXQujkTiuDRnHGfQdcnSf | signer+writable | authority      | 11111 | 0        | 10,000,000,000 | -1,234,960 |
│ │  +----+----------------------------------------------+-----------------+----------------+-------+----------+----------------+------------+
│ │  | #3 | 11111111111111111111111111111111             | readonly        | system_program | Nativ | 14       | 1              | 0          |
│ │  +----+----------------------------------------------+-----------------+----------------+-------+----------+----------------+------------+
│ │  └─ #1 11111111111111111111111111111111 (System Program) - CreateAccount
│ │  │    lamports: 1224960
│ │  │    space: 48
│ │  │  Accounts (2):
│ │  │  +----+----------------------------------------------+-----------------+-----------------+
│ │  │  | #  | Account                                      | Type            | Name            |
│ │  │  +----+----------------------------------------------+-----------------+-----------------+
│ │  │  | #1 | 5Z6Ay5NEcbg3xhopc522sBCRXQujkTiuDRnHGfQdcnSf | signer+writable | funding_account |
│ │  │  +----+----------------------------------------------+-----------------+-----------------+
│ │  │  | #2 | 7v54NWdBtkjuAFJrLGsS2SXnuk8nKam81mZJeeYxVFi9 | signer+writable | new_account     |
│ │  │  +----+----------------------------------------------+-----------------+-----------------+

│ Program Logs:
│
│ Program Counter111111111111111111111111111111111111 invoke [1]
│ Instruction: Initialize
│ Program 11111111111111111111111111111111 invoke [2]
│ Program 11111111111111111111111111111111 success
│ Program Counter111111111111111111111111111111111111 consumed 4413 of 200000 compute units
│ Program Counter111111111111111111111111111111111111 success
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
