tests/tests/snapshots/counter_program__counter_set_table.snap
---
source: tests/tests/counter_program.rs
expression: stripped
---
┌──────────────────────────────────────────────────────────── Transaction #1 ─────────────────────────────────────────────────────────────┐
│ Transaction: 2txCbjETvNuCXVSNBa9UJMjJUBXDM88oYBjCmWmHHssNfvX7AwdBqXkjyFRUGCPB9gJURArrh7EohaSeSBsvc2NU | Slot: 0 | Status: Success
│ Fee: 0.000005 SOL | Compute Used: 1184/1400000 CU
│
│ Instructions (1):
│
│ ├─ #1 Counter111111111111111111111111111111111111 (Counter) - Set
│ │    value: 42
│ │  Accounts (2):
│ │  +----+----------------------------------------------+-----------------+-----------+-------+----------+---------------+--------+
│ │  | #  | Account                                      | Type            | Name      | Owner | Data Len | Lamports      | Change |
│ │  +----+----------------------------------------------+-----------------+-----------+-------+----------+---------------+--------+
│ │  | #1 | mBKqcnGotbsSb5vNrdyhzZ5EhqZdids9QYiTRckvi7v  | writable        | counter   | Count | 48       | 1,224,960     | 0      |
│ │  +----+----------------------------------------------+-----------------+-----------+-------+----------+---------------+--------+
│ │  | #2 | 5Z6Ay5NEcbg3xhopc522sBCRXQujkTiuDRnHGfQdcnSf | signer+writable | authority | 11111 | 0        | 9,998,760,040 | -5,000 |
│ │  +----+----------------------------------------------+-----------------+-----------+-------+----------+---------------+--------+

│ Program Logs:
│
│ Program Counter111111111111111111111111111111111111 invoke [1]
│ Instruction: Set
│ Program Counter111111111111111111111111111111111111 consumed 1184 of 200000 compute units
│ Program Counter111111111111111111111111111111111111 success
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
